# bernard

./: .coveragerc  .editorconfig  .gitignore  .travis.yml  BOOK-OF-FRUSTRATIONS.md  MANIFEST.in  Makefile  README.md  README.txt  pyproject.toml  requirements.in  requirements.txt  requirements_as_lib.txt  setup.py  travis.sh
.github/workflows/: validation.yml
demobot/: README.md  states.py
demobot/i18n/fr/: intents.csv
doc/: context.md  get_started.md  get_started_old.md  get_started_old2.md  health_checks.md  middlewares.md  patterns.md  platforms.md  readme.md  triggers.md  vision.md
doc/get-started/: concepts.md  fsm.md  installation.md  number-bot.md  patterns.md  readme.md  start.md
doc/lang/: nlg.md  nlu.md  readme.md
doc/layers/: facebook.md  generic.md  readme.md  telegram.md
examples/demobot/: README.md  settings.py  transitions.py
examples/demobot/i18n/fr/: responses.csv
examples/fullbot/: README.md  settings.py  states.py  transitions.py
examples/fullbot/i18n/fr/: intents.csv  responses.csv
examples/number_bot/: README.md  manage.py  requirements.txt
examples/number_bot/i18n/en/: intents.csv  responses.csv
examples/number_bot/src/number_bot/: settings.py  states.py  store.py  transitions.py  triggers.py
src/: pytest.ini
src/bernard/: layers.py  server.py  trigram.py  utils.py
src/bernard/analytics/: __init__.py  _helpers.py  base.py
src/bernard/analytics/ga/: __init__.py  _ga.py  _helpers.py
src/bernard/cli/: __init__.py  _base.py  _live_reload.py
src/bernard/conf/: __init__.py  default_settings.py  loader.py  utils.py
src/bernard/core/: health_check.py
src/bernard/engine/: __init__.py  _base.py  app.py  fsm.py  platform.py  request.py  responder.py  state.py  transition.py  triggers.py
src/bernard/i18n/: __init__.py  _formatter.py  intents.py  loaders.py  translator.py  utils.py
src/bernard/layers/: __init__.py  definitions.py  helpers.py  stack.py
src/bernard/media/: __init__.py  base.py
src/bernard/middleware/: __init__.py  _builtins.py  _manager.py
src/bernard/misc/main/: __init__.py  _base.py
src/bernard/misc/sheet_sync/: __init__.py  _base.py
src/bernard/misc/start_project/: _base.py
src/bernard/reporter/: __init__.py  _base.py  _raven.py
src/bernard/server/: __init__.py  http.py  views.py
src/bernard/storage/: redis.py  register.py
tests/issue_0001/: states.py  test_class_exp.py  test_conf.py  test_engine.py  test_i18n.py  test_layers.py  test_storage.py  test_trigram.py  test_utils.py  transitions.py
tests/issue_0001/assets/: engine_settings.py  intents.csv  settings.py  trans.csv  trans2.csv
tests/issue_0004/: test_sleep.py
tests/issue_0005/: test_intents.py  test_responses.py
tests/issue_0005/assets/: trans_fr.csv
tests/issue_0007/: test_layers.py  test_matching.py
tests/issue_0007/assets/: trans.csv
tests/issue_0009/: test_send.py
tests/issue_0014/: test_render_param.py  test_sentence.py  test_word_dict.py
tests/issue_0020/: test_dict_subset.py
tests/issue_0021/: test_default_state.py  transitions.py
tests/issue_0023/: test_messaging_type.py
tests/issue_0027/: test_render_flags.py
tests/issue_0029/: test_auto_sleep.py  test_manager.py
tests/issue_0030/: test_hooks.py  test_load.py  test_render_flags.py
tests/issue_0030/assets/: trans.csv
tests/issue_0031/: test_typing.py
tests/issue_0037/: test_matcher.py
tests/issue_0038/: test_sleep.py
tests/issue_0046/: test_loader.py  test_matcher.py
tests/issue_38/: test_sleep.py
(+15 files in other folders)
