[tool.poetry]
name = "bernard"
version = "0.0.0"
description = "Bot Engine Responding Naturally At Requests Detection"
authors = ["Rémy Sanchez <remy.sanchez@hyperthese.net>"]
license = "AGPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.8.3"
redis = "^4.3.5"
ujson = "^5.5.0"
Unidecode = "^1.3.6"
PyJWT = "^2.6.0"
uvloop = "^0.17.0"
sentry-sdk = "^1.11.1"
Babel = "^2.11.0"
python-dateutil = "^2.8.2"
pytz = "^2022.6"
aionotify = "^0.2.0"
facepy = "^1.0.12"
google-api-python-client = "^2.66.0"
oauth2client = "^4.1.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
twine = "^4.0.1"
isort = "^5.10.1"
black = "^22.10.0"

[tool.poetry-dynamic-versioning]
enable = true
pattern = "default-unprefixed"
format-jinja = """
    {%- if distance == 0 -%}
        {{ serialize_pep440(base, stage, revision) }}
    {%- elif revision is not none -%}
        {{ serialize_pep440(base, stage, revision + 1, dev=distance, metadata=[commit]) }}
    {%- else -%}
        {{ serialize_pep440(bump_version(base, index=1), stage, revision, dev=distance, metadata=[commit]) }}
    {%- endif -%}
"""

[build-system]
requires = ["poetry-core", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"
