[tool.poetry]
name = "bernard"
version = "0.0.0"
description = "Bot Engine Responding Naturally At Requests Detection"
authors = ["Rémy Sanchez <remy.sanchez@hyperthese.net>"]
license = "AGPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.9.1"
aionotify = "^0.2.0"
babel = "^2.14.0"
facepy = "^1.0.12"
google-api-python-client = "^2.113.0"
oauth2client = "^4.1.3"
pyjwt = "^2.8.0"
python-dateutil = "^2.8.2"
pytz = "^2022.6"
redis = "^5.0.1"
sentry-sdk = "^1.39.2"
ujson = "^5.9.0"
unidecode = "^1.3.7"
uvloop = "^0.19.0"

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
isort = "^5.13.2"
pytest = "^7.4.4"
twine = "^4.0.2"

[tool.poetry.scripts]
bernard = 'bernard.misc.main:main'

[tool.poetry-dynamic-versioning]
enable = true
pattern = "default-unprefixed"
format-jinja = """
    {%- if distance == 0 -%}
        {{ serialize_pep440(base, stage, revision) }}
    {%- elif revision is not none -%}
        {{ serialize_pep440(base, stage, revision + 1, dev=distance, metadata=[commit]) }}
    {%- else -%}
        {{ serialize_pep440(bump_version(base, index=1), stage, revision, dev=distance, metadata=[commit]) }}
    {%- endif -%}
"""

[build-system]
requires = ["poetry-core", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"
